<resources>
    <string name="app_name">阜外APP</string>
    <string name="hint_name">阜外账号/手机</string>
    <string name="hint_password">登录密码</string>
    <string name="hint_ip">服务器IP地址</string>
    <string name="login_text">登录</string>
    <string name="more_loading">加载中，请稍候...</string>
    <string name="no_more">没有更多数据了</string>
    <string name="now_register"><u>没有账号，现在注册</u></string>
    <string name="now_login"><u>已有账号，现在登录</u></string>
</resources>
