<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:underLine="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:src="@drawable/fuwai_icon" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_20dp"
        android:paddingRight="@dimen/dimen_20dp"
        android:src="@drawable/fuwai_text" />

    <com.immrwk.myworkspace.widget.UnderlineEditText
        android:id="@+id/edt_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@null"
        android:hint="@string/hint_name"
        android:paddingLeft="@dimen/dimen_5dp"
        android:textSize="20sp"
        underLine:underLineColorEt="@color/commonPurple" />

    <com.immrwk.myworkspace.widget.UnderlineEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@null"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dimen_5dp"
        android:textSize="20sp"
        underLine:underLineColorEt="@color/commonPurple" />

    <com.immrwk.myworkspace.widget.UnderlineEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@null"
        android:hint="请输入邮箱"
        android:paddingLeft="@dimen/dimen_5dp"
        android:textSize="20sp"
        android:visibility="gone"
        underLine:underLineColorEt="@color/commonPurple" />

    <com.immrwk.myworkspace.widget.UnderlineEditText
        android:id="@+id/edt_ip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@null"
        android:hint="@string/hint_ip"
        android:paddingLeft="@dimen/dimen_5dp"
        android:textSize="20sp"
        underLine:underLineColorEt="@color/commonPurple" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/now_register"
        android:textColor="@color/commonPurple" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/login_text"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
</LinearLayout>
